# tests/STLCompliance.OpenApi.Tests/snapshots/nexarr.openapi.json
@@ -7658,6 +7658,61 @@
         }
       }
     },
+    "/api/v1/platform/service-tokens/introspect": {
+      "post": {
+        "tags": [
+          "ServiceTokens"
+        ],
+        "operationId": "IntrospectServiceTokenPlatformV1",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ValidateServiceTokenRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/platform/tenants/{tenantId}/entitlements/{productKey}": {
+      "get": {
+        "tags": [
+          "Entitlements"
+        ],
+        "operationId": "CheckPlatformTenantEntitlementV1",
+        "parameters": [
+          {
+            "name": "tenantId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "productKey",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/products": {
       "get": {
         "tags": [
@@ -8671,7 +8726,7 @@
         }
       }
     },
-    "/api/v1/tenants/{tenantId}/entitlements/{productCode}": {
+    "/api/v1/tenants/{tenantId}/entitlements/{productKey}": {
       "patch": {
         "tags": [
           "Entitlements"
@@ -8688,7 +8743,7 @@
             }
           },
           {
-            "name": "productCode",
+            "name": "productKey",
             "in": "path",
             "required": true,
             "schema": {
@@ -8728,7 +8783,7 @@
             }
           },
           {
-            "name": "productCode",
+            "name": "productKey",
             "in": "path",
             "required": true,
             "schema": {
@@ -11146,6 +11201,9 @@
       "name": "NexArr.Api"
     },
     {
+      "name": "Entitlements"
+    },
+    {
       "name": "ServiceTokens"
     },
     {
@@ -11177,9 +11235,6 @@
     },
     {
       "name": "Products"
-    },
-    {
-      "name": "Entitlements"
     },
     {
       "name": "Audit"
